# word-hunter

./: .gitignore  imgproc.py  main.py  pyproject.toml  requirements-build.txt  requirements.txt  scrabblesolve.py  upload
claws/: claws.ino
