[project]
name = "word-predator"
version = "0.1.0"
description = "Word Hunt Bot!"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.22",
    "flask>=3.1.3",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "serverless-wsgi>=3.1.0",
]
